# food-takeaway-location-lisbon

./: .coverage  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: income-inequality.csv  median-price-rent-per-m2.csv  proportion-foreign-resident-population.csv  single-parent-familes.csv
food_takeaway_location_lisbon/: .gitignore
food_takeaway_location_lisbon/tests/: test_pyproject.py
