[project]
name = "food-takeaway-location-lisbon"
version = "0.1.0"
description = "This project aims to identify the most strategic location in Lisbon to open a new **takeaway food shop**, using socio-economic, demographic and geographic data. The goal is to combine **data science techniques** and **local knowledge** to support a real-world business decision."
authors = [
    {name = "diogolamy",email = "diogolamy1999@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "folium (>=0.20.0,<0.21.0)"
]

[tool.poetry]
packages = [{ include = "food_takeaway_location_lisbon" }]

[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
pytest = "^8.4.1"
black = "^25.1.0"
pylint = "^3.3.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
